--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ambf_control_system"]
 	path = ambf_control_system
 	url = https://github.com/WPI-AIM/ambf_control_system.git
+[submodule "ambf_addon"]
+	path = ambf_addon
+	url = https://github.com/WPI-AIM/ambf_addon.git
